Temporary dropdown visible problem fixed!

--- a/plugins/Apps/webroot/css/style.css
+++ b/plugins/Apps/webroot/css/style.css
@@ -1040,4 +1040,7 @@ a{
 
 
 
-
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+}
